fixed header and artwork detail overlaping

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -113,7 +113,6 @@ body {
 
 header {
   margin-bottom: 10px;
-  position: sticky;
 }
 
 
